# quadcopter

./: .gitignore
Quadcopter/: CMakeCache.txt  CMakeLists.txt  INSTALL  Makefile  PID.cpp  PID.h  Quadcopter.cbp  Quadcopter.layout  README  RTIMULib.ini  Readme  autopilot.c  autopilot.h  autopilot_global_functions.c  autopilot_global_functions.h  autopilot_global_variables.h  cmake_install.cmake  data_logger.c  data_logger.h  data_logger_global_variables.h  global_functions.c  global_functions.h  imu.h  imu_globals_variables.h  main.c  objectives.txt  pca9685.h  pca9685_reg.h  pilot.c  pilot.h  pilot_global_variables.h  quadcopter.c  quadcopter.cbp  reader.c  reader.h  reader_global_variables.h  shared_librairies.h  test_pca9685.c
Quadcopter/Inter thread messages/: inter-thread-messages.c  inter-thread-messages.h
Quadcopter/RTIMULib/: CMakeLists.txt  IMUstart.c  RTIMU.cpp  RTIMULib.h  RTIMULibDefs.h  RTIMUMPU6050HMC5883L.cpp  RTIMUMPU6050HMC5883L.h  RTIMUSettings.cpp  RTIMUSettings.h  RTMath.h
Quadcopter/cmake-2.8.3/: CMakeCPackOptions.cmake  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestScript.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
Quadcopter/cmake-2.8.3/Bootstrap.cmk/: InitialCacheFlags.cmake  Makefile  cmConfigure.h
Quadcopter/cmake-2.8.3/Bootstrap.cmk/cmsys/: Configure.h  Configure.hxx
Quadcopter/cmake-2.8.3/Docs/: cmake.1  cmakecommands.1  cmakecompat.1  cmakemodules.1  cmakepolicies.1  cmakeprops.1  cmakevars.1  cpack.1  ctest.1
Quadcopter/cmake-2.8.3/Source/: CTestTestfile.cmake  Makefile  cmConfigure.h  cmake_install.cmake
Quadcopter/cmake-2.8.3/Source/kwsys/: CTestTestfile.cmake  Makefile  cmake_install.cmake  cmsysTestProcess  cmsysTestSharedForward  cmsysTestsC  cmsysTestsCxx  testSharedForward.c  testSystemTools.h
Quadcopter/cmake-2.8.3/Tests/: CMakeBuildTest.cmake  CTestTestfile.cmake  CTestUpdateGIT.cmake  EnforceConfig.cmake  Makefile  cmake_install.cmake
Quadcopter/cmake-2.8.3/Tests/CMakeLib/: CMakeLibTests  CTestTestfile.cmake  Makefile  cmake_install.cmake  testXMLParser.h
Quadcopter/cmake-2.8.3/Tests/CMakeTests/: CMakeMinimumRequiredTest.cmake  CTestTestfile.cmake  CompilerIdVendorTest.cmake  ConfigureFileTest.cmake  ELFTest.cmake  EndStuffTest.cmake  FileDownloadTest.cmake  FileTest.cmake  FindBaseTest.cmake  Makefile  MathTest.cmake  MessageTest.cmake  ModuleNoticesTest.cmake  StringTest.cmake  ToolchainTest.cmake  cmake_install.cmake
Quadcopter/cmake-2.8.3/Tests/CTestConfig/: Debug-dashboard.cmake  Debug-script.cmake  MinSizeRel-dashboard.cmake  MinSizeRel-script.cmake  RelWithDebInfo-dashboard.cmake  RelWithDebInfo-script.cmake  Release-dashboard.cmake  Release-script.cmake
Quadcopter/cmake-2.8.3/Tests/CTestScriptMode/: CTestTestScriptMode.cmake
Quadcopter/cmake-2.8.3/Tests/CTestTestBadExe/: test.cmake
Quadcopter/cmake-2.8.3/Tests/CTestTestCrash/: test.cmake
Quadcopter/cmake-2.8.3/Tests/CTestTestCycle/: test.cmake
Quadcopter/cmake-2.8.3/Tests/CTestTestDepends/: test.cmake
Quadcopter/cmake-2.8.3/Tests/CTestTestFailedSubmits/: test-cp.cmake  test-ftp.cmake  test-http.cmake  test-https.cmake  test-scp.cmake  test-xmlrpc.cmake
Quadcopter/cmake-2.8.3/Tests/CTestTestFailure/: testNoBuild.cmake  testNoExe.cmake
Quadcopter/cmake-2.8.3/Tests/CTestTestParallel/: test.cmake
Quadcopter/cmake-2.8.3/Tests/CTestTestResourceLock/: test.cmake
Quadcopter/cmake-2.8.3/Tests/CTestTestScheduler/: test.cmake
Quadcopter/cmake-2.8.3/Tests/CTestTestStopTime/: test.cmake
Quadcopter/cmake-2.8.3/Tests/CTestTestSubdir/: test.cmake
Quadcopter/cmake-2.8.3/Tests/CTestTestTimeout/: test.cmake
Quadcopter/cmake-2.8.3/Utilities/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Quadcopter/cmake-2.8.3/Utilities/Doxygen/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Quadcopter/cmake-2.8.3/Utilities/KWStyle/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Quadcopter/cmake-2.8.3/Utilities/cmbzip2/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Quadcopter/cmake-2.8.3/Utilities/cmcompress/: Makefile  (+2 more)
Quadcopter/src/: Inter thread messages.cbp  PID.cpp  PID.h  Quadcopter.cbp  Quadcopter.depend  Quadcopter.layout  Quadcopter.layout.cbTemp  autopilot.c  autopilot.c.save  autopilot.cpp  autopilot.h  autopilot.h.save  autopilot_global_functions.c  autopilot_global_functions.h  autopilot_global_variables.h  autopilot_global_variables.h.save  data_logger.c  data_logger.cpp  data_logger.cpp.save  data_logger.h  global_functions.c  global_functions.cpp  global_functions.h  global_functions.h.save  imu.c  imu.cpp  imu.cpp.save  imu.h  imu.h.save  imu_globals_variables.h  imu_globals_variables.h.save  inter-thread-messages.c  inter-thread-messages.c.save  inter-thread-messages.cpp  inter-thread-messages.h  inter-thread-messages.h.save  messages.txt  osd.h  pca9685.h  pilot.c  (+17 more)
Quadcopter/src/RTIMULib/: BMP085.c  BMP085.cpp  BMP085.h  CMakeCache.txt  CMakeLists.txt~  Makefile  NEO-6M.c  NEO-6M.cpp  NEO-6M.h  RTIMU.cpp  RTIMULib.h  RTIMUMPU6050HMC5883L.cpp  RTIMUSettings.cpp  RTMath.cpp  RTMath.h  cmake_install.cmake  imu.cpp  testBMP085.c
TestIMU/RTIMULib/: CMakeCache.txt  CMakeLists.txt  Makefile  RTIMUHal.cpp  RTIMUSettings.h  cmake_install.cmake  main.cpp  main.h
(+46 files in other folders)
